# dualshock4_cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindHIDAPI.cmake
include/: GamepadEventDispatcher.h  GamepadManager.h
src/: GamepadEventDispatcher.cpp  GamepadManager.cpp  main.cpp
